--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "aframe": "^0.8.2",
     "aframe-extras": "^5.0.1",
+    "aframe-react": "^4.4.0",
+    "aframe-star-system-component": "^1.0.0",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-polyfill": "^6.26.0",
