--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "aframe": "^0.8.2",
+    "aframe-environment-component": "^1.1.0",
     "aframe-extras": "^5.0.1",
     "aframe-react": "^4.4.0",
     "aframe-star-system-component": "^1.0.0",
