--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "aframe": "^0.8.2",
     "aframe-environment-component": "^1.1.0",
     "aframe-extras": "^5.0.1",
+    "aframe-glow": "^1.0.1",
+    "aframe-particle-system-component": "^1.1.3",
     "aframe-react": "^4.4.0",
     "aframe-star-system-component": "^1.0.0",
     "babel": "^6.23.0",
@@ -48,6 +50,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.3",
+    "file-loader": "^3.0.1",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1"
   }
